--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "d3": "^7.4.4",
     "parcel": "^2.4.1",
     "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   }
 }
