--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "d3": "^7.4.4",
     "parcel": "^2.4.1",
+    "perf_hooks": "0.0.1",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
